src/assets/global.scss
$banner-height: 92px;

button {
    background-color: cadetblue;
    border: none;
    color: white;
    padding: 6px 16px;
    border-radius: 2px;
    /*text-align: center;*/
    /*text-decoration: none;*/
    /*display: inline-block;*/
    /*font-size: 16px;*/
}

// .slms-control {
//   position: absolute;
//   padding: 2px;
//   background-color: rgba(255,255,255,.4);
//   border-radius: 4px;
// }

